try new config for steam deck connection

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -13,3 +13,7 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 
 # Enable mouse keys
 CONFIG_ZMK_POINTING=y
+
+# Try to fix on steam deck 
+CONFIG_BT_CTLR_PHY_2M=n
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
